Fix syncing reactions in note to self to linked devices.
Fixes #11027